# finzup-api

./: README.md  app.py  makefile  pyproject.toml  render.yaml  run.py
finzup_api/: auth.py  config.py  db.py  main.py  models.py  services.py
templates/: invoice_schema.json
tests/: test_main.py
